--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
+<!DOCTYPE html>=
 
-test
 
 <html>
   <head>
@@ -21,7 +20,6 @@ test
       </div>
 	 
       
-        <div class="clear"></div>
       </div>
     </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
